--- a/ezCart/index.html
+++ b/ezCart/index.html
@@ -10,7 +10,7 @@
   <!-- Header -->
   <header>
     <div class="logo">
-      <img src="assets/logo.png" alt="ezCart Logo">
+      <img src="assets/logo.png" alt="ezCart Logo" height="100px" width="100px">
     </div>
     <nav>
       <ul>
