--- a/eZcart-Master/index.html
+++ b/eZcart-Master/index.html
@@ -1403,7 +1403,7 @@
 
 				<p class="stext-107 cl6 txt-center">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://github.com/paras-x11" target="_blank">eZcart</a> &amp; distributed by <a href="https://github.com/paras-x11" target="_blank">Me</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://github.com/paras-x11" target="_blank">Me</a> &amp; distributed by <a href="https://github.com/paras-x11" target="_blank">eZcart</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 
 				</p>
