--- a/eZcart-Master/blog.html
+++ b/eZcart-Master/blog.html
@@ -346,7 +346,7 @@
 									</span>
 
 									<span class="stext-109 cl3 txt-center">
-										Jan 2018
+										Jan 2024
 									</span>
 								</div>
 							</a>
@@ -399,7 +399,7 @@
 									</span>
 
 									<span class="stext-109 cl3 txt-center">
-										Jan 2018
+										Jan 2024
 									</span>
 								</div>
 							</a>
@@ -452,7 +452,7 @@
 									</span>
 
 									<span class="stext-109 cl3 txt-center">
-										Jan 2018
+										Jan 2024
 									</span>
 								</div>
 							</a>
@@ -620,7 +620,7 @@
 								<li class="p-b-7">
 									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
 										<span>
-											July 2018
+											July 2024
 										</span>
 
 										<span>
@@ -632,7 +632,7 @@
 								<li class="p-b-7">
 									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
 										<span>
-											June 2018
+											June 2024
 										</span>
 
 										<span>
@@ -644,7 +644,7 @@
 								<li class="p-b-7">
 									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
 										<span>
-											May 2018
+											May 2024
 										</span>
 
 										<span>
@@ -656,7 +656,7 @@
 								<li class="p-b-7">
 									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
 										<span>
-											April  2018
+											April  2024
 										</span>
 
 										<span>
@@ -668,7 +668,7 @@
 								<li class="p-b-7">
 									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
 										<span>
-											March 2018
+											March 2024
 										</span>
 
 										<span>
@@ -680,7 +680,7 @@
 								<li class="p-b-7">
 									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
 										<span>
-											February 2018
+											February 2024
 										</span>
 
 										<span>
@@ -692,7 +692,7 @@
 								<li class="p-b-7">
 									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
 										<span>
-											January 2018
+											January 2024
 										</span>
 
 										<span>
@@ -704,7 +704,7 @@
 								<li class="p-b-7">
 									<a href="#" class="flex-w flex-sb-m stext-115 cl6 hov-cl1 trans-04 p-tb-2">
 										<span>
-											December 2017
+											December 2023
 										</span>
 
 										<span>
@@ -886,10 +886,7 @@
 				</div>
 
 				<p class="stext-107 cl6 txt-center">
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> &amp; distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-
+					Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://github.com/paras-x11" target="_blank">Me</a> &amp; distributed by <a href="https://github.com/paras-x11" target="_blank">eZcart</a>
 				</p>
 			</div>
 		</div>
