--- a/eZcart-Master/index.html
+++ b/eZcart-Master/index.html
@@ -53,7 +53,7 @@
 							Help & FAQs
 						</a>
 
-						<a href="#" class="flex-c-m trans-04 p-lr-25">
+						<a href="login.html" class="flex-c-m trans-04 p-lr-25">
 							My Account
 						</a>
 
