--- a/eZcart-Master/index.html
+++ b/eZcart-Master/index.html
@@ -82,7 +82,7 @@
 							<li class="active-menu">
 								<a href="index.html">Home</a>
 								<ul class="sub-menu">
-									<li><a href="index.html">Homepage 1</a></li>
+									<li><a href="index.html">Main Page</a></li>
 									<li><a href="home-02.html">Homepage 2</a></li>
 									<li><a href="home-03.html">Homepage 3</a></li>
 								</ul>
