--- a/eZcart-Master/index.html
+++ b/eZcart-Master/index.html
@@ -78,12 +78,12 @@
 				  <!-- Menu desktop -->
 				  <div class="menu-desktop">
 					<ul class="main-menu">
-					  <li><a href="index.html">Home</a></li>
+					  <li class="active-menu"><a href="index.html">Home</a></li>
 					  <li><a href="product.html">Shop</a></li>
-					  <li class="label1" data-label1="hot"><a href="shoping-cart.html">Features</a></li>
+					  <li><a href="checkout.html">Check Out</a></li>
 					  <li><a href="blog.html">Blog</a></li>
 					  <li><a href="about.html">About</a></li>
-					  <li><a href="contact.html">Contact</a></li>
+					  <li><a href="contact.html">Contact</a></li> 
 					</ul>
 				  </div>
 			  
@@ -179,15 +179,7 @@
 
 			<ul class="main-menu-m">
 				<li>
-					<a href="index.html">Home</a>
-					<ul class="sub-menu-m">
-						<li><a href="index.html">Homepage 1</a></li>
-						<li><a href="home-02.html">Homepage 2</a></li>
-						<li><a href="home-03.html">Homepage 3</a></li>
-					</ul>
-					<span class="arrow-main-menu-m">
-						<i class="fa fa-angle-right" aria-hidden="true"></i>
-					</span>
+					<a href="index.html" class="active-menu">Home</a>
 				</li>
 
 				<li>
@@ -195,11 +187,11 @@
 				</li>
 
 				<li>
-					<a href="shoping-cart.html" class="label1 rs1" data-label1="hot">Features</a>
+					<a href="checkout.html" >Checkout</a>
 				</li>
 
 				<li>
-					<a href="blog.html">Blog</a>
+					<a href="blog.html" class="label1 rs1" data-label1="hot">Blog</a>
 				</li>
 
 				<li>
@@ -305,7 +297,7 @@
 							View Cart
 						</a>
 
-						<a href="shoping-cart.html" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
+						<a href="checkout.html" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
 							Check Out
 						</a>
 					</div>
